# grokery

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  test.py
app/: admin.py  apps.py  models.py  urls.py  views.py
app/api/: __init__.py  views.py
app/migrations/: 0001_initial.py  0002_grocerylist_grocerylistitem_recipe.py  0002_usercurrentrecipes_usergrocerylist.py
app/services/: auth_service.py  grocery_service.py  llm_service.py  recipe_service.py
app/static/app/css/: style.css
app/static/app/js/: grocery-list.js  main.js  recipes.js
app/templates/: base.html  grocery_item_details.html  grocery_list_expanded.html  landing.html  preferences_modal.html  recipe_modal.html  recipe_page.html  start.html
app/templates/account/: login.html  signup.html
groc/: asgi.py  settings.py  urls.py  wsgi.py
grokery/: asgi.py  settings.py  urls.py  wsgi.py
notebooks/: test.ipynb
staticfiles/app/css/: style.css
staticfiles/app/js/: main.js
