[tool.poetry]
name = "groc"
version = "0.1.0"
description = "Grocery planner and recipe app"
authors = ["aabbey <39168609+aabbey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
django-allauth = "^0.61.1"
openai = "^1.58.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
